tests/expectations/compiler/records/nested_record_3_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:11:9
     |
  11 |         bar: Foo,
     |         ^^^
     |
     = Remove the record `Foo` from `Bar`.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
